# aivonx_proxy

./: .dockerignore  .gitignore  .safety-project.ini  404.html  CNAME  Dockerfile  LICENSE  README.md  README.zh.md  docker-compose-test.yml  docker-compose.yml  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docker.yml  tests.yml  web.yml
REST_Client/: health.http
REST_Client/proxy/: CRUD.http  NodeCRUD.http  NodeGroupCRUD.http  Ollama.http
development/code_structure/: index.html
development/contributing/: index.html
development/testing/: index.html
docs/: index.md  index.zh.md
docs/actions/: 000_LearningData.md  001_start_project.md  002_app.md  003_settings.md  005_djangorestframework.md
docs/aivonx_proxy/: README.md  api_endpoints.md  architecture.md  cli.md  collectstatic.md  config.md  deployment.md  ha.md  modules.md  overview.md  testing.md  troubleshooting.md
docs/development/: code_structure.md  code_structure.zh.md  contributing.md  contributing.zh.md  testing.md  testing.zh.md
docs/django/: 001_start_project.md  004_admin.md  006_collectstatic.md
docs/getting_started/: deployment_options.md  deployment_options.zh.md  faq.md  faq.zh.md  introduction.md  introduction.zh.md  quick_start_guide.md  quick_start_guide.zh.md  requirements.md  requirements.zh.md
docs/reference/: api_documentation.md  api_documentation.zh.md  cli_commands.md  cli_commands.zh.md  configuration.md  configuration.zh.md
docs/resources/: glossary.md  glossary.zh.md  security.md  security.zh.md  troubleshooting.md  troubleshooting.zh.md
getting_started/deployment_options/: index.html
getting_started/faq/: index.html
getting_started/introduction/: index.html
getting_started/quick_start_guide/: index.html
getting_started/requirements/: index.html
reference/api_documentation/: index.html
reference/cli_commands/: index.html
reference/configuration/: index.html
resources/glossary/: index.html
resources/security/: index.html
resources/troubleshooting/: index.html
search/: search_index.json
src/: manage.py
src/account/: apps.py  models.py  tests.py  urls.py  views.py
src/account/migrations/: 0001_initial.py  0002_delete_user.py  0003_create_root.py
src/aivonx/: asgi.py  settings.py  urls.py  utils.py  views.py  wsgi.py
src/analyze/: apps.py  viewsets.py
src/logviewer/: __init__.py  apps.py  tests.py  urls.py  views.py  web.py
src/logviewer/templates/: logviewer.html
src/proxy/: apps.py  forms.py  handlers.py  models.py  serializers.py  signals.py  streaming.py  urls.py  views.py  views_proxy.py  viewsets.py  web.py
src/proxy/migrations/: 0001_initial.py  (+8 more)
zh/: index.html
(+43 files in other folders)
