[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "aivonx"
version = "0.0.0.dev0"
requires-python = ">=3.12, <3.13"
description = "aivonx"

authors = [
    { name = "Xuan‑You Lin", email = "a0985821880@gmail.com" }
]

dependencies = [
    "python-dotenv>=1.2.1",
    "pydantic>=2.12.4",

    "gunicorn>=23.0.0",
    "uvicorn>=0.38.0",
    "requests>=2.32.5",

    "django>=5.2.8",
    "django-asgi-lifespan>=0.5.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
]

[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets",
    "nest_asyncio",
    "jupyterlab_widgets",
]

[tool.hatch.build.targets.wheel]
packages = ["src/"]
